save session calls by preparing state on predicate transformations